fixed to scroll overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,12 +19,16 @@
   }
 }
 
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-  overflow:visible;
+  overflow: visible;
 }
 
 .flip-card {
